added maintenance message to html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
     <link rel="stylesheet" href="style.css" />
     <title>Scheduled Maintenance</title>
   </head>
-  <body></body>
+  <body>
+    <div class="message">
+      We are scheduling a maintenance window for The Key on Tuesday February 8th
+      from 10:00pm - 11:00pm (3:00am - 4:00am UTC Wednesday) to perform a
+      required database upgrade. During this window we are expecting 30 minutes
+      of downtime that will prevent users from authenticating with The Key. This
+      maintenance window will have no effect on applications that no longer use
+      The Key and now use Okta directly for authentication.
+    </div>
+  </body>
 </html>
