--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
   </head>
   <body>
     <div class="message">
-      We are scheduling a maintenance window for The Key on Tuesday February 8th
-      from 10:00pm - 11:00pm (3:00am - 4:00am UTC Wednesday) to perform a
-      required database upgrade. During this window we are expecting 30 minutes
-      of downtime that will prevent users from authenticating with The Key. This
-      maintenance window will have no effect on applications that no longer use
-      The Key and now use Okta directly for authentication.
+      The Key is currently undergoing a brief period of maintenance. We
+      apologize for any inconvenience. We plan to be back online soon.
     </div>
   </body>
 </html>
